[CDH5] Fix for new signature for DFSUtil.getInfoServer()
Change-Id: I9fb49014e10624324d4f62a76b7ccf04b985dbac
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1333
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Henry Robinson <henry@cloudera.com>